add faq section, footer (full page :1920px)

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
     />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
-
   <body>
     <header class="header">
       <div class="container">
@@ -819,7 +818,113 @@
           </div>
         </div>
       </section>
+      <section class="s-faq">
+        <div class="container">
+          <div class="s-title s-faq__title">FAQ</div>
+          <div class="s-faq__inner">
+            <ul class="accordion s-faq__accordion">
+              <li class="accordion__item accordion__item--active">
+                <p class="accordion__question">
+                  Lorem ipsum dolor sit amet consectetur. Bibendum proin
+                </p>
+                <p class="accordion__answer">
+                  Lorem ipsum dolor sit amet consectetur. Ipsum lacus nulla in
+                  eget sit. Lacus iaculis sed mollis mi massa tortor scelerisque
+                  sed amet. Turpis et sit tincidunt eget. Dolor nisl fermentum
+                  cras erat nisl facilisis. Et.
+                </p>
+                <div class="accordion__decor">
+                  <span class="accordion__horizontal-line"></span>
+                  <span class="accordion__vertical-line"></span>
+                </div>
+              </li>
+              <li class="accordion__item">
+                <p class="accordion__question">
+                  Lorem ipsum dolor sit amet consectetur. Bibendum proin
+                </p>
+                <p class="accordion__answer">
+                  Lorem ipsum dolor sit amet consectetur. Ipsum lacus nulla in
+                  eget sit. Lacus iaculis sed mollis mi massa tortor scelerisque
+                  sed amet. Turpis et sit tincidunt eget. Dolor nisl fermentum
+                  cras erat nisl facilisis. Et.
+                </p>
+                <div class="accordion__decor">
+                  <span class="accordion__horizontal-line"></span>
+                  <span class="accordion__vertical-line"></span>
+                </div>
+              </li>
+              <li class="accordion__item">
+                <p class="accordion__question">
+                  Lorem ipsum dolor sit amet consectetur. Bibendum proin
+                </p>
+                <p class="accordion__answer">
+                  Lorem ipsum dolor sit amet consectetur. Ipsum lacus nulla in
+                  eget sit. Lacus iaculis sed mollis mi massa tortor scelerisque
+                  sed amet. Turpis et sit tincidunt eget. Dolor nisl fermentum
+                  cras erat nisl facilisis. Et.
+                </p>
+                <div class="accordion__decor">
+                  <span class="accordion__horizontal-line"></span>
+                  <span class="accordion__vertical-line"></span>
+                </div>
+              </li>
+              <li class="accordion__item">
+                <p class="accordion__question">
+                  Lorem ipsum dolor sit amet consectetur. Bibendum proin
+                </p>
+                <p class="accordion__answer">
+                  Lorem ipsum dolor sit amet consectetur. Ipsum lacus nulla in
+                  eget sit. Lacus iaculis sed mollis mi massa tortor scelerisque
+                  sed amet. Turpis et sit tincidunt eget. Dolor nisl fermentum
+                  cras erat nisl facilisis. Et.
+                </p>
+                <div class="accordion__decor">
+                  <span class="accordion__horizontal-line"></span>
+                  <span class="accordion__vertical-line"></span>
+                </div>
+              </li>
+            </ul>
+            <div class="s-faq__ask-question-box">
+              <h4 class="s-faq__ask-question-title">Ask your question</h4>
+              <form class="form s-faq__form" action="#">
+                <input class="form__input" type="text" placeholder="Name" />
+                <input class="form__input" type="email" placeholder="Email" />
+                <textarea
+                  class="form__textarea"
+                  placeholder="Enter Your Question Here ....."
+                ></textarea>
+                <button class="btn form__btn s-faq__form-btn" type="submit">
+                  Schedule a call
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__logo-wrapper">
+            <img class="footer__img" src="images/logo.png" alt="logo" />
+          </div>
+          <p class="footer__copyright">© 2024 Dickens Consulting Group, LLC</p>
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Course</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">About</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
     <script src="js/script.min.js"></script>
   </body>
 </html>
