add adaptive >320px (prod: v1)

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,12 @@
               </li>
             </ul>
           </nav>
-          <a class="btn" href="#">Login</a>
+          <a class="btn header__btn" href="#">Login</a>
+          <button class="burger" type="button">
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+          </button>
         </div>
       </div>
     </header>
@@ -74,7 +79,7 @@
       <section class="s-advantages">
         <div class="container">
           <div class="s-advantages__box-title">
-            <h2 class="s-title">Advantages</h2>
+            <h2 class="s-title s-advantages__title">Advantages</h2>
           </div>
           <ul class="s-advantages__list">
             <li class="s-advantages__item">
@@ -465,7 +470,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -509,7 +514,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -553,7 +558,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -597,7 +602,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -641,7 +646,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -685,7 +690,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -729,7 +734,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
@@ -773,7 +778,7 @@
                 />
                 <div class="s-testimonials__slide-info">
                   <h6 class="s-testimonials__slide-name">Name</h6>
-                  <p class="s-testimonials__slide-role">Name</p>
+                  <p class="s-testimonials__slide-role">Role Here</p>
                   <div class="s-testimonials__slide-stars">
                     <img
                       class="s-testimonials__slide-star"
